Replace JetBrains annotations with JSpecify (#1377)